<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_fortune_simple"
        android:icon="@drawable/ic_get_simple"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/get_simple_fortune"
        />

    <item
        android:id="@+id/action_new_fortune"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/app_new_fortune"
        />

    <item
        android:id="@+id/menu_item_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/share_fortune"
        />
</menu>
