<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_fortune_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fortuneLabel"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fortune_label"/>

    <TextView
        android:id="@+id/fortune_detail_view"
        style="@style/style_fortune_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/learnLabel"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_label"/>

    <TextView
        android:id="@+id/engLabel"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english_label"/>

    <TextView
        android:id="@+id/lang_eng_view"
        style="@style/style_fortune_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/chiLabel"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chinese_label"/>

    <TextView
        android:id="@+id/lang_chi_view"
        style="@style/style_fortune_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/proLabel"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pro_label"/>

    <TextView
        android:id="@+id/lang_pro_view"
        style="@style/style_fortune_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>
